--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   web_socket_channel: ^2.4.0
   just_audio: ^0.9.35
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
