--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,4 +76,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ipa
-          path: client/build/ios/ipa/*.ipa
+          path: client/build/ios/iphoneos/*.app
