--- a/server/.gitignore
+++ b/server/.gitignore
@@ -174,3 +174,9 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+/config.yaml
+/feats_stats.npz
+/model.pth
+/spk_xvector.ark
+/tg_reader.session
