--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   just_audio: ^0.9.35
   workmanager: ^0.5.2
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
